--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "UberClone",
   "version": "1.0.0",
   "private": true,
+  "config": {
+    
+  },
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
@@ -15,6 +18,7 @@
     "@nuxtjs/auth-next": "*",
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.25.3",
+    "express": "^4.18.2",
     "maz-ui": "^2.4.7",
     "nuxt": "^2.15.8",
     "vue": "^2.7.10",
