--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "nuxt": "^2.15.8",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
-    "vue-template-compiler": "^2.7.10"
+    "vue-template-compiler": "^2.7.10",
+    "@nuxt/ufo": "^0.5.4"
   },
   "devDependencies": {
     "@nuxt/postcss8": "^1.1.3",
@@ -35,7 +36,7 @@
     "prettier": "^2.7.1"
   },
   "engines": {
-    "node": "16.0"
+    "node": "14.0"
   },
   "resolutions": {
     "@nuxt/kit": "3.0.0-rc.13"
