--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "lintfix": "prettier --write --list-different ."
   },
   "dependencies": {
-    "@nuxt/ufo": "^0.5.4",
     "@nuxtjs/auth-next": "*",
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.25.3",
     "express": "^4.18.2",
     "maz-ui": "^2.4.7",
     "nuxt": "^2.15.8",
+    "ufo": "^0.8.6",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10"
@@ -34,7 +34,7 @@
     "prettier": "^2.7.1"
   },
   "engines": {
-    "node": "14.0"
+    "node": "16.0"
   },
   "resolutions": {
     "@nuxt/kit": "3.0.0-rc.13"
