--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nuxt": "^2.15.8",
     "ufo": "^0.8.6",
     "vue": "^2.7.10",
+    "vue-qrcode-component": "^2.1.1",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10"
   },
