--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "maz-ui": "^2.4.7",
     "nuxt": "^2.15.8",
+    "nuxt-material-design-icons": "^1.0.4",
     "ufo": "^0.8.6",
     "vue": "^2.7.10",
     "vue-qrcode-component": "^2.1.1",
@@ -35,7 +36,7 @@
     "prettier": "^2.7.1"
   },
   "engines": {
-    "node": "16.0"
+    "node": "16.10.0"
   },
   "resolutions": {
     "@nuxt/kit": "3.0.0-rc.13"
