--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "lintfix": "prettier --write --list-different ."
   },
   "dependencies": {
+    "@lottiefiles/vue-lottie-player": "^1.1.0",
     "@nuxtjs/auth-next": "*",
     "@nuxtjs/axios": "^5.13.6",
+    "cookie-universal-nuxt": "^2.2.2",
     "core-js": "^3.25.3",
     "express": "^4.18.2",
     "maz-ui": "^2.4.7",
@@ -22,9 +24,12 @@
     "nuxt-material-design-icons": "^1.0.4",
     "ufo": "^0.8.6",
     "vue": "^2.7.10",
+    "vue-lottie": "^0.2.1",
+    "vue-paypal-checkout": "^3.2.0",
     "vue-qrcode-component": "^2.1.1",
     "vue-server-renderer": "^2.7.10",
-    "vue-template-compiler": "^2.7.10"
+    "vue-template-compiler": "^2.7.10",
+    "vue-toast-notification": "^0.6.3"
   },
   "devDependencies": {
     "@nuxt/postcss8": "^1.1.3",
