--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nuxt-material-design-icons": "^1.0.4",
     "ufo": "^0.8.6",
     "vue": "^2.7.10",
+    "vue-loading-skeleton": "^2.0.0-beta.1",
     "vue-lottie": "^0.2.1",
     "vue-paypal-checkout": "^3.2.0",
     "vue-qrcode-component": "^2.1.1",
